force-app/main/default/objects/Activity/fields/All_Child_Tasks_Closed__c.field-meta.xml
<CustomField>
    <fullName>All_Child_Tasks_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Child Tasks Closed</label>
    <type>Checkbox</type>
</CustomField>