force-app/main/default/objects/Activity/fields/Attribute1__c.field-meta.xml
<CustomField>
    <fullName>Attribute1__c</fullName>
    <label>Attribute1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>