force-app/main/default/objects/Activity/fields/Attribute2__c.field-meta.xml
<CustomField>
    <fullName>Attribute2__c</fullName>
    <label>Attribute2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>