force-app/main/default/objects/Activity/fields/Attribute3__c.field-meta.xml
<CustomField>
    <fullName>Attribute3__c</fullName>
    <label>Attribute3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>