force-app/main/default/objects/Activity/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <label>Call Result</label>
    <length>200</length>
    <type>Text</type>
</CustomField>