force-app/main/default/objects/Activity/fields/Child_Task_Category__c.field-meta.xml
<CustomField>
    <fullName>Child_Task_Category__c</fullName>
    <label>Child Task Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Task_Child_Category</valueSetName>
    </valueSet>
</CustomField>