force-app/main/default/objects/Activity/fields/Commnets__c.field-meta.xml
<CustomField>
    <fullName>Commnets__c</fullName>
    <label>Internal Commnets</label>
    <type>TextArea</type>
</CustomField>