force-app/main/default/objects/Activity/fields/Created_Since__c.field-meta.xml
<CustomField>
    <fullName>Created_Since__c</fullName>
    <formula>IF( ISBLANK(CompletedDateTime  ),  TODAY() -  DATEVAlUE(CreatedDate),DATEVALUE(CompletedDateTime) -  DATEVAlUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Since</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>