force-app/main/default/objects/Activity/fields/Current_Attempt_No__c.field-meta.xml
<CustomField>
    <fullName>Current_Attempt_No__c</fullName>
    <label>Current Attempt No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>