force-app/main/default/objects/Activity/fields/Current_Review_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Review_Level__c</fullName>
    <label>Current Review Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>