force-app/main/default/objects/Activity/fields/DateTime_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>DateTime_of_Meeting__c</fullName>
    <label>DateTime of Meeting</label>
    <type>DateTime</type>
</CustomField>