force-app/main/default/objects/Activity/fields/Default_Owner_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Default_Owner_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if the default owner was assigned or still pending</description>
    <label>Default Owner Assigned</label>
    <type>Checkbox</type>
</CustomField>