force-app/main/default/objects/Activity/fields/Delete_Attempt_No__c.field-meta.xml
<CustomField>
    <fullName>Delete_Attempt_No__c</fullName>
    <label>Delete Attempt No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SL_No</valueSetName>
    </valueSet>
</CustomField>