force-app/main/default/objects/Activity/fields/Dependent_Task_Creation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Task_Creation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependent Task Creation Completed</label>
    <type>Checkbox</type>
</CustomField>