force-app/main/default/objects/Activity/fields/Execution_Depended_Closed_Task_Ids__c.field-meta.xml
<CustomField>
    <fullName>Execution_Depended_Closed_Task_Ids__c</fullName>
    <description>Execution Depended Closed Task Ids</description>
    <label>Execution Depended Closed Task Ids</label>
    <type>TextArea</type>
</CustomField>