force-app/main/default/objects/Activity/fields/Execution_Depended_on_Task_Ids__c.field-meta.xml
<CustomField>
    <fullName>Execution_Depended_on_Task_Ids__c</fullName>
    <label>Execution Depended on Task Ids</label>
    <type>TextArea</type>
</CustomField>