force-app/main/default/objects/Activity/fields/Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>Geo_Location__c</fullName>
    <label>Geo Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>