force-app/main/default/objects/Activity/fields/Has_Child_Task__c.field-meta.xml
<CustomField>
    <fullName>Has_Child_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check this box true if child task has the current task as parent task</description>
    <label>Has Child Task</label>
    <type>Checkbox</type>
</CustomField>