force-app/main/default/objects/Activity/fields/Holiday_Adjusted_In_SLA__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Adjusted_In_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holiday Adjusted In SLA</label>
    <type>Checkbox</type>
</CustomField>