force-app/main/default/objects/Activity/fields/Initiated_Since__c.field-meta.xml
<CustomField>
    <fullName>Initiated_Since__c</fullName>
    <formula>IF(ABS(DATETIMEVALUE( Initiated_Date__c ) - DATETIMEVALUE(TODAY())) &lt; ABS(DATETIMEVALUE( Initiated_Date__c ) - DATETIMEVALUE(CompletedDateTime)),ABS(DATETIMEVALUE( Initiated_Date__c ) - DATETIMEVALUE(TODAY())),ABS(DATETIMEVALUE( Initiated_Date__c ) - DATETIMEVALUE(CompletedDateTime)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initiated Since</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>