force-app/main/default/objects/Activity/fields/Is_SLA_Overdued__c.field-meta.xml
<CustomField>
    <fullName>Is_SLA_Overdued__c</fullName>
    <formula>if(DATEVALUE(CompletedDateTime)  &gt;  ActivityDate , true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is SLA Overdued</label>
    <type>Checkbox</type>
</CustomField>