force-app/main/default/objects/Activity/fields/Last_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Open_Date__c</fullName>
    <label>Last Open Date</label>
    <type>DateTime</type>
</CustomField>