force-app/main/default/objects/Activity/fields/Meeting_Call_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Call_Purpose__c</fullName>
    <label>Meeting/Call Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Scheduled Meeting</fullName>
            </value>
            <value>
                <fullName>Document Pick up</fullName>
            </value>
            <value>
                <fullName>Collection Call</fullName>
            </value>
            <value>
                <fullName>CamsPay FAILURE : Call the Customer</fullName>
            </value>
            <value>
                <fullName>Transaction Summary opened PG not opened  : Call the Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>