force-app/main/default/objects/Activity/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <formula>DATEVALUE( DateTime_of_Meeting__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>