force-app/main/default/objects/Activity/fields/Meeting_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Time__c</fullName>
    <formula>TIMEVALUE( DateTime_of_Meeting__c + 330/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Time</label>
    <type>Time</type>
</CustomField>