force-app/main/default/objects/Activity/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/cmp/c__TaskFlowFromAura?c__id=&quot;+Id, &quot;View/Edit&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Action</label>
    <type>Text</type>
</CustomField>