force-app/main/default/objects/Activity/fields/No_Of_Times_Reviewed_Count__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Times_Reviewed_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No Of Times Reviewed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>