force-app/main/default/objects/Activity/fields/Overdue_By__c.field-meta.xml
<CustomField>
    <fullName>Overdue_By__c</fullName>
    <formula>IF(ABS(DATETIMEVALUE(TODAY()) - DATETIMEVALUE( ActivityDate )) &lt; ABS(DATETIMEVALUE( CompletedDateTime ) - DATETIMEVALUE(ActivityDate)),IF(DATETIMEVALUE(TODAY()) - DATETIMEVALUE( ActivityDate ) &lt; 0,0,DATETIMEVALUE(TODAY()) - DATETIMEVALUE( ActivityDate )),IF(DATETIMEVALUE( CompletedDateTime ) - DATETIMEVALUE(ActivityDate) &lt; 0,0,DATETIMEVALUE( CompletedDateTime ) - DATETIMEVALUE(ActivityDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>