force-app/main/default/objects/Activity/fields/Owner_Spend_Time__c.field-meta.xml
<CustomField>
    <fullName>Owner_Spend_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Owner Spend Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>