force-app/main/default/objects/Activity/fields/Parent_Task_Closure_Dependent__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task_Closure_Dependent__c</fullName>
    <formula>Process_Path_Task_Detail__r.Parent_Task_Closure_Dependent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent_Task_Closure_Dependent</label>
    <type>Checkbox</type>
</CustomField>