force-app/main/default/objects/Activity/fields/Parent_Task_ID_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task_ID_Follow_Up__c</fullName>
    <label>Parent Task ID Follow Up</label>
    <length>20</length>
    <type>Text</type>
</CustomField>