force-app/main/default/objects/Activity/fields/Process_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Process Attribute</label>
    <referenceTo>Process_Attribute__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>