force-app/main/default/objects/Activity/fields/Process_Attribute_Details__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The task to be actioned</description>
    <label>Process Attribute Details</label>
    <referenceTo>Process_Attribute_Details__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>