force-app/main/default/objects/Activity/fields/Process_Attribute_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute_Object_Type__c</fullName>
    <formula>text( Process_Attribute__r.Object_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Attribute Object Type</label>
    <type>Text</type>
</CustomField>