force-app/main/default/objects/Activity/fields/Process_Attribute_Path_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute_Path_Deviation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process_Attribute_Path_Deviation</label>
    <referenceTo>Process_Attribute_Path_Deviation__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>