force-app/main/default/objects/Activity/fields/Process_Attribute_Review_Detail__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute_Review_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Attribute Review Detail</label>
    <referenceTo>Process_Attribute_Review_Detail__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities_del</relationshipName>
    <type>Lookup</type>
</CustomField>