force-app/main/default/objects/Activity/fields/Process_Path_Deviation_End_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Process_Path_Deviation_End_Task_Id__c</fullName>
    <label>Process Path Deviation End Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>