force-app/main/default/objects/Activity/fields/Process_Path_Deviation_Ids__c.field-meta.xml
<CustomField>
    <fullName>Process_Path_Deviation_Ids__c</fullName>
    <label>Process Path Deviation Ids ToBe Executed</label>
    <type>TextArea</type>
</CustomField>