force-app/main/default/objects/Activity/fields/Process_Path_Deviation_Ids_Executed__c.field-meta.xml
<CustomField>
    <fullName>Process_Path_Deviation_Ids_Executed__c</fullName>
    <label>Process Path Deviation Ids Executed</label>
    <type>TextArea</type>
</CustomField>