force-app/main/default/objects/Activity/fields/Process_Path_Deviation_Initiated_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Process_Path_Deviation_Initiated_Task_Id__c</fullName>
    <description>To capture the task from which the new deviation path was intitated</description>
    <label>Process Path Deviation Initiated Task Id</label>
    <type>TextArea</type>
</CustomField>