force-app/main/default/objects/Activity/fields/Process_Path_Initiated_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Process_Path_Initiated_Task_Id__c</fullName>
    <description>unique taks id which contains the value of the first task of the path. 
Note: For merger tasked, the first path task will drive the deviation if any</description>
    <label>Process Path Initiated Task Id</label>
    <type>TextArea</type>
</CustomField>