force-app/main/default/objects/Activity/fields/Process_Path_Merged_Task_Ids__c.field-meta.xml
<CustomField>
    <fullName>Process_Path_Merged_Task_Ids__c</fullName>
    <description>Can have multiple values depending upon ff the new task of a new path is merged into the existing &quot;Draft&quot;/&quot;Open&quot;  task</description>
    <label>Process Path Merged Task Ids</label>
    <type>TextArea</type>
</CustomField>