force-app/main/default/objects/Activity/fields/Process_Path_Task_Detail__c.field-meta.xml
<CustomField>
    <fullName>Process_Path_Task_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Path Task Detail</label>
    <referenceTo>Process_Path_Task_Detail__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>