force-app/main/default/objects/Activity/fields/Process_Share_Document_Task_Ids__c.field-meta.xml
<CustomField>
    <fullName>Process_Share_Document_Task_Ids__c</fullName>
    <label>Process Share Document Task Ids</label>
    <type>TextArea</type>
</CustomField>