force-app/main/default/objects/Activity/fields/Process_Task_Detail__c.field-meta.xml
<CustomField>
    <fullName>Process_Task_Detail__c</fullName>
    <formula>CASESAFEID(Process_Path_Task_Detail__r.Process_Task_Detail__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Task Detail</label>
    <type>Text</type>
</CustomField>