force-app/main/default/objects/Activity/fields/Queue_Allocation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Queue_Allocation_Date_Time__c</fullName>
    <label>Queue Allocation Date/Time</label>
    <type>DateTime</type>
</CustomField>