force-app/main/default/objects/Activity/fields/Queue_Spend_Time__c.field-meta.xml
<CustomField>
    <fullName>Queue_Spend_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Queue Spend Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>