force-app/main/default/objects/Activity/fields/Report_View__c.field-meta.xml
<CustomField>
    <fullName>Report_View__c</fullName>
    <formula>if ( or($UserRole.Name ==  Owner:Queue.QueueName,  $User.Id ==  Owner:User.Id,   CONTAINS($User.User_Access_Queue_List__c,Owner:Queue.QueueName)   ),True,False)</formula>
    <label>Report View</label>
    <type>Checkbox</type>
</CustomField>