force-app/main/default/objects/Activity/fields/Review_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Review_Record_Id__c</fullName>
    <label>Review Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>