force-app/main/default/objects/Activity/fields/Reviewer_Assigned_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Assigned_Date_Time__c</fullName>
    <label>Reviewer Assigned Date/Time</label>
    <type>DateTime</type>
</CustomField>