force-app/main/default/objects/Activity/fields/Serialnumber__c.field-meta.xml
<CustomField>
    <fullName>Serialnumber__c</fullName>
    <label>Serialnumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>