force-app/main/default/objects/Activity/fields/SMSVariablevalue__c.field-meta.xml
<CustomField>
    <fullName>SMSVariablevalue__c</fullName>
    <label>SMSVariablevalue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>