force-app/main/default/objects/Activity/fields/Submitted_User__c.field-meta.xml
<CustomField>
    <fullName>Submitted_User__c</fullName>
    <label>Submitted User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>