force-app/main/default/objects/Activity/fields/Task_Custom__c.field-meta.xml
<CustomField>
    <fullName>Task_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Custom</label>
    <referenceTo>Task_Custom__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>