force-app/main/default/objects/Activity/fields/Task_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Open_Date__c</fullName>
    <description>This field will be filled when the activity status updates to &quot;Open&quot; from &quot;Draft.&quot;</description>
    <label>Task Open Date</label>
    <type>Date</type>
</CustomField>