force-app/main/default/objects/Activity/fields/Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>