force-app/main/default/objects/Activity/fields/Tobe_Completed_In__c.field-meta.xml
<CustomField>
    <fullName>Tobe_Completed_In__c</fullName>
    <formula>IF( DATETIMEVALUE(TODAY()) - DATETIMEVALUE(ActivityDate) &gt; 0, 0 , ABS(DATETIMEVALUE(TODAY()) - DATETIMEVALUE(ActivityDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tobe Completed In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>