force-app/main/default/objects/Activity/fields/User_Allocated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>User_Allocated_Date_Time__c</fullName>
    <label>User Allocated Date/Time</label>
    <type>DateTime</type>
</CustomField>