force-app/main/default/objects/Activity/fields/User_Info_Details__c.field-meta.xml
<CustomField>
    <fullName>User_Info_Details__c</fullName>
    <formula>$UserRole.Name + &quot; - &quot; + Owner:Queue.QueueName + &quot; - &quot; + $User.Id  + &quot; - &quot; +  Owner:User.Id + &quot; - &quot; + Owner:Queue.QueueName+ &quot; - &quot; + $User.User_Access_Queue_List__c</formula>
    <label>User Info Details</label>
    <type>Text</type>
</CustomField>