force-app/main/default/objects/Activity/fields/Welcome_Calling_Details__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Calling_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Welcome Calling Details</label>
    <referenceTo>Welcome_Calling_Details__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>